src/objects/BMCServiceDesk__SLA_Milestone_Task_Transaction__c.object
<CustomObject>
    <description>SLA Milestone Task Transaction records.</description>
    <fields>
        <fullName>BMCServiceDesk__Cc__c</fullName>
        <label>Cc</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA_Milestone_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLA Milestone Action</label>
        <referenceTo>BMCServiceDesk__SLA_Milestone_Actions__c</referenceTo>
        <relationshipLabel>SLA Milestone Task Transactions</relationshipLabel>
        <relationshipName>SLA_Milestone_Task_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLA Milestone</label>
        <referenceTo>BMCServiceDesk__SLA_Milestones__c</referenceTo>
        <relationshipLabel>SLA Milestone Task Transactions</relationshipLabel>
        <relationshipName>SLA_Milestone_Task_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>BMCServiceDesk__ServiceLevelAgreement__c</referenceTo>
        <relationshipLabel>SLA Milestone Task Transactions</relationshipLabel>
        <relationshipName>SLA_Milestone_Task_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask_Service_Target__c</fullName>
        <label>Task Service Target</label>
        <referenceTo>BMCServiceDesk__Task_Service_Target__c</referenceTo>
        <relationshipLabel>SLA Milestone Task Transactions</relationshipLabel>
        <relationshipName>SLA_Milestone_Task_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>SLA Milestone Task Transactions</relationshipLabel>
        <relationshipName>SLA_Milestone_Task_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA_Milestone_Type__c</fullName>
        <formula>BMCServiceDesk__FKSLA_Milestone__r.BMCServiceDesk__Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Milestone Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__To__c</fullName>
        <label>To</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User_Ref_ID__c</fullName>
        <label>User Ref ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SLA Milestone Task Transaction</label>
    <nameField>
        <label>SLA Milestone Task Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Milestone Task Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>